--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+test_live = []
+
 [dependencies]
 async-trait = "0.1.74"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.10", features = ["derive"] }
-crates-index = "2.3.0"
 dirs = "5.0.1"
 http = "1.0.0"
 reqwest = { version = "0.11.22", features = ["blocking", "json", "gzip"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
